--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <main>
         <section id="phone">
             
+            <iframe src="home.html" frameborder="0" name="screen" id="screen">
+                Acesso recusado
+            </iframe>
 
         </section>
 
