--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
 
         <section id="icons">
 
+            <a href="#" target="tela"> <img src="pacote_projeto/logos/logo-home.jpg" alt="Home"></a><br>
+            <a href="#" target="tela"> <img src="pacote_projeto/logos/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="#" target="tela"> <img src="pacote_projeto/logos/logo-youtube.jpg" alt="Youtube"></a><br>
+            <a href="#" target="tela"> <img src="pacote_projeto/logos/logo-github.jpg" alt="GitHub"></a><br>
+            <a href="#" target="tela"> <img src="pacote_projeto/logos/logo-facebook.jpg" alt="Facebook"></a>
+
         </section>
     </main>
 </body>
