Dando vida aos botões

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
         <section id="icons">
 
-            <a href="#" target="tela"> <img src="pacote_projeto/logos/logo-home.jpg" alt="Home"></a><br>
-            <a href="#" target="tela"> <img src="pacote_projeto/logos/logo-instagram.jpg" alt="Instagram"></a><br>
-            <a href="#" target="tela"> <img src="pacote_projeto/logos/logo-youtube.jpg" alt="Youtube"></a><br>
-            <a href="#" target="tela"> <img src="pacote_projeto/logos/logo-github.jpg" alt="GitHub"></a><br>
-            <a href="#" target="tela"> <img src="pacote_projeto/logos/logo-facebook.jpg" alt="Facebook"></a>
+            <a href="home.html" target="screen"> <img src="pacote_projeto/logos/logo-home.jpg" alt="Home"></a><br>
+            <a href="instagram.html" target="screen"> <img src="pacote_projeto/logos/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="youtube.html" target="screen"> <img src="pacote_projeto/logos/logo-youtube.jpg" alt="Youtube"></a><br>
+            <a href="github.html" target="screen"> <img src="pacote_projeto/logos/logo-github.jpg" alt="GitHub"></a><br>
+            <a href="facebook.html" target="screen"> <img src="pacote_projeto/logos/logo-facebook.jpg" alt="Facebook"></a>
 
         </section>
     </main>
