--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="instagram.html" target="screen"> <img src="pacote_projeto/logos/logo-instagram.jpg" alt="Instagram"></a><br>
             <a href="youtube.html" target="screen"> <img src="pacote_projeto/logos/logo-youtube.jpg" alt="Youtube"></a><br>
             <a href="github.html" target="screen"> <img src="pacote_projeto/logos/logo-github.jpg" alt="GitHub"></a><br>
-            <a href="facebook.html" target="screen"> <img src="pacote_projeto/logos/logo-facebook.jpg" alt="Facebook"></a>
+            <a href="linkedIn.html" target="screen"> <img class="linkedIn-logo" src="pacote_projeto/logos/linkedin.png" alt="Facebook"></a>
 
         </section>
     </main>
