--- a/linkedIn.html
+++ b/linkedIn.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook</title>
+    <title>LinkedIn</title>
     <link rel="stylesheet" href="styles/social.css">
 </head>
 <body>
-    <img src="pacote_projeto/images/tela-facebook.jpg" alt="Facebook">
+    <img src="pacote_projeto/images/tela-facebook.jpg" alt="LinkedIn">
     <a href="https://www.youtube.com/user/cursoemvideo/playlists"  target="_blank" rel="author">ACESSE</a>
 </body>
 </html>
