Testando Media Quiry

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redes Sociais</title>
     
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" media="all">
+    <link rel="stylesheet" href="styles/smartphone.css" media="screen and (min-width: 500px) and (max-width: 992px)">
     
     <link rel="apple-touch-icon" sizes="180x180" href="pacote_projeto/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="pacote_projeto/favicon_io/favicon-32x32.png">
