Alterando ícones na Media Query

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
         <section id="icons">
 
-            <a href="home.html" target="screen"> <img src="pacote_projeto/logos/logo-home.jpg" alt="Home"></a><br>
-            <a href="instagram.html" target="screen"> <img src="pacote_projeto/logos/logo-instagram.jpg" alt="Instagram"></a><br>
-            <a href="youtube.html" target="screen"> <img src="pacote_projeto/logos/logo-youtube.jpg" alt="Youtube"></a><br>
-            <a href="github.html" target="screen"> <img src="pacote_projeto/logos/logo-github.jpg" alt="GitHub"></a><br>
-            <a href="linkedIn.html" target="screen"> <img class="linkedIn-logo" src="pacote_projeto/logos/linkedin.png" alt="Facebook"></a>
+            <a class="bar-lateral" href="home.html" target="screen"> <img src="pacote_projeto/logos/logo-home.jpg" alt="Home"></a>
+            <a class="bar-lateral" href="instagram.html" target="screen"> <img src="pacote_projeto/logos/logo-instagram.jpg" alt="Instagram"></a>
+            <a class="bar-lateral" href="youtube.html" target="screen"> <img src="pacote_projeto/logos/logo-youtube.jpg" alt="Youtube"></a>
+            <a class="bar-lateral" href="github.html" target="screen"> <img src="pacote_projeto/logos/logo-github.jpg" alt="GitHub"></a>
+            <a class="bar-lateral" href="linkedIn.html" target="screen"> <img class="linkedIn-logo" src="pacote_projeto/logos/linkedin.png" alt="Facebook"></a>
 
         </section>
     </main>
